FEAT-3300:"View subscription details when approving a subscription create or update" Task FEAT-3464:"Moving style from code to CSS file"
1. Styles moved to .css file;
2. Added .bat file to apply last UI MT Control changes;
3. Metric Name label localized.

Code Reviewer: RPuzikov

--- a/MasterPages/NoMenuPageExt.master
+++ b/MasterPages/NoMenuPageExt.master
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="<%= GetGlobalResourceObject("Resource", "LocalizedStyleSheet") %>" />
   <link rel="stylesheet" type="text/css" href="/Res/Styles/menuStyle.css?v=6.5"/>
   <link rel="stylesheet" type="text/css" href="/Res/Styles/MiscField.css?v=6.5"/>
+  <link rel="stylesheet" type="text/css" href="/Res/Styles/MTViewChangeControl.css?v=7.2"/>
   <link rel="icon" type="image/ico" href="/MetraNet/favicon.ico" />
 
   <script type="text/javascript" src="/Res/Ext/adapter/ext/ext-base.js?v=6.5"></script>
