--- a/MasterPages/NoMenuPageExt.master
+++ b/MasterPages/NoMenuPageExt.master
@@ -2,9 +2,9 @@
 <%@ Register Src="../UserControls/LocalizedIncludes.ascx" TagName="LocalizedIncludes"  TagPrefix="uc4" %>
 <%@ Register Src="../UserControls/Error.ascx" TagName="Error" TagPrefix="uc3" %>
 <%@ Import namespace="MetraTech.UI.Common" %>
-<!DOCTYPE html>
 <html>
 <head id="Head1" runat="server">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
   <title>MetraNet</title>
   
   <link rel="stylesheet" type="text/css" href="/Res/Ext/resources/css/ext-all.css?v=6.5" />
@@ -12,6 +12,8 @@
   <link rel="stylesheet" type="text/css" href="/Res/Styles/menuStyle.css?v=6.5"/>
   <link rel="stylesheet" type="text/css" href="/Res/Styles/MiscField.css?v=6.5"/>
   <link rel="icon" type="image/ico" href="/MetraNet/favicon.ico" />
+  <link rel="stylesheet" type="text/css" href="/Res/Ext/resources/css/xtheme-gray.css" />
+
 
   <script type="text/javascript" src="/Res/Ext/adapter/ext/ext-base.js?v=6.5"></script>
   <script type="text/javascript" src="/Res/Ext/ext-all.js?v=6.5"></script>
@@ -33,6 +35,8 @@
 
     var serverOffset = <%=TimeZone.CurrentTimeZone.GetUtcOffset(DateTime.Now).TotalSeconds %>;
   </script>
+
+  
 </head>
 
 <body>
