--- a/MasterPages/PageExt.master
+++ b/MasterPages/PageExt.master
@@ -3,9 +3,10 @@
 <%@ Register Src="~/UserControls/Menus/AccountMenu.ascx" TagName="AccountMenu" TagPrefix="uc2" %>
 <%@ Register Src="../UserControls/Error.ascx" TagName="Error" TagPrefix="uc3" %>
 <%@ Import namespace="MetraTech.UI.Common" %>
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head id="Head1" runat="server">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
   <title>MetraNet</title> 
   
   <link rel="stylesheet" type="text/css" href="/Res/Ext/resources/css/ext-all.css?v=6.5" />
@@ -15,6 +16,10 @@
   <link rel="stylesheet" type="text/css" href="/Res/Styles/menuStyle.css?v=6.5" />  
   <link rel="icon" type="image/ico" href="/MetraNet/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="/Res/Styles/SuperBoxSelect.css?v=6.5" />
+  <link rel="stylesheet" type="text/css" href="/Res/Ext/resources/css/xtheme-metranet.css" />
+
+
+
 
   <script type="text/javascript" src="/Res/Ext/adapter/ext/ext-base.js?v=6.5"></script>
   <script type="text/javascript" src="/Res/Ext/ext-all.js?v=6.5"></script>
@@ -34,6 +39,9 @@
   <script type="text/javascript" src="/Res/ux/form/LargeNumberField.js?v=6.5"></script>
   <script type="text/javascript" src="/Res/JavaScript/RowSelectionModelOverride.js?v=6.5"></script>
   <script type="text/javascript" src="/Res/Ext/examples/form/states.js?v=6.5"></script>
+
+    <script src="http://d3js.org/d3.v3.js"></script>
+
                
   <%=Constants.CJ_PROTECTION_CODE %>               
   <script type="text/javascript">
@@ -68,6 +76,7 @@
       top.resetSessionTimer();
   </script>
 		
+  
 </head>
 
 <body onload="pageInit();" onbeforeunload="pageUnload();" onunload="pageUnload();">
