--- a/MasterPages/MetraNetExt.master
+++ b/MasterPages/MetraNetExt.master
@@ -148,7 +148,8 @@ height: 18px !important;
 	background: rgb(51, 51, 51);
 }
 
-</style>     
+</style>
+     
 </head>
 
 <body>
@@ -359,28 +360,26 @@ height: 18px !important;
     
     '->'
     ,
-       new Ext.Toolbar.SplitButton({
-            text: userInfo,
-            
-            //handler: onButtonClick,
-            //tooltip: {text:'This is a an example QuickTip for a toolbar item', title:'Tip Title'},
-            iconCls: 'blist',
-            // Menus can be built/referenced by using nested menu config objects
-            menu : {
-                items: [{
-                  text: 'Change Password',
-                  icon: '/Res/Images/icons/lock_edit.png',
-//                            <Link>/MetraNet/ChangePassword.aspx</Link>
-//                            <Target>MainContentIframe</Target>
-                },{
-                    text: 'My Security Settings',
-                    icon: '/Res/Images/icons/key_go.png',   
-//                            <Link>/MetraNet/TicketToMam.aspx?URL=/MAM/default/dialog/ManageSecurity.asp?MDMReload=True**MODE=CSR_DEFAULT_POLICY</Link>
-//                            <Target>MainContentIframe</Target>                                     
-
-                }]
-            }
-        }),
+        new Ext.Toolbar.SplitButton({
+        text: userInfo,    
+         handler: function() {
+          Ext.UI.LoadPage('/MetraNet/Welcome.aspx'); ;
+        },
+        //tooltip: {text:'This is a an example QuickTip for a toolbar item', title:'Tip Title'},
+        iconCls: 'blist',
+        // Menus can be built/referenced by using nested menu config objects
+        menu : {
+          items: [{
+              text: 'Change Password',
+              icon: '/Res/Images/icons/lock_edit.png',
+              handler: function() { Ext.UI.LoadPage('/MetraNet/ChangePassword.aspx'); }
+            },{
+              text: 'My Security Settings',
+              icon: '/Res/Images/icons/key_go.png',
+              handler: function() { Ext.UI.LoadPage('/MetraNet/TicketToMam.aspx?URL=/MAM/default/dialog/ManageSecurity.asp?MDMReload=True**MODE=CSR_DEFAULT_POLICY'); }
+            }]
+        }
+      }),
        
         "-",
         {
