--- a/MasterPages/LoginPageExt.master
+++ b/MasterPages/LoginPageExt.master
@@ -58,13 +58,13 @@
 </html>
 <script type="text/javascript">
     var flagOkLoadStore = "true";
-    var currentBackgroundImageNumber = Math.floor(Math.random() * 9) + 1;
+    var currentBackgroundImageNumber = 4;   //Math.floor(Math.random() * 9) + 1;
 
-    var currentImageValueFromCookies = parseInt(Ext.util.Cookies.get('currentBackgroundImageNumber'));
+    /*var currentImageValueFromCookies = parseInt(Ext.util.Cookies.get('currentBackgroundImageNumber'));
     if (!isNaN(currentImageValueFromCookies)) {
         currentBackgroundImageNumber = currentImageValueFromCookies;
         Ext.util.Cookies.set('currentBackgroundImageNumber', null);
-    }
+    }*/
 
     var root = '/Res/Images/login/bg/login_' + currentBackgroundImageNumber + ".jpg";
     document.getElementById('login-page-background').style.backgroundImage = 'url(' + root + ')';
