--- a/default/localized/us/styles/RuleEditor_styles.css
+++ b/default/localized/us/styles/RuleEditor_styles.css
@@ -139,13 +139,11 @@ text-align: center;
 background-color: #f9f9f9;
 background-image: url(/Res/Ext/resources/images/metranet/grid/grid3-hrow2.gif);
 FONT: normal 11px/15px arial, tahoma, helvetica, sans-serif;
-border-color: #d0d0d0;
 border-right: 1px solid #eee;
 border-left: 1px solid #d0d0d0;
 padding: 4px 3px 4px 5px;
 }
 
-}
 
 .clsHeaderLink{
     FONT-SIZE: 12px;
@@ -192,8 +190,9 @@ padding: 4px 3px 4px 5px;
     PADDING-LEFT: 4px;
     PADDING-RIGHT: 3px;
     white-space: -webkit-nowrap;
-    background-image: url(../images/toolbar/toolbarTile.gif);
-    background-color: rgb(192, 192, 192);
+    background-color:#d0d0d0;
+    /*background-image:url(/Res/Ext/resources/images/metranet/panel/top-bottom.gif);
+    background-color: rgb(192, 192, 192);*/
    }
 	
 .clsInfoURL {  
