--- a/default/localized/us/styles/ASyncStyles.css
+++ b/default/localized/us/styles/ASyncStyles.css
@@ -11,7 +11,7 @@
 .clsLoginTitle{
 /*	padding: 3px 15px 3px 15px; */
 	font-size: 18px;
-	font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-family: tahoma,arial,verdana,sans-serif;
 	font-weight: bold;
 	text-align: left;
 	color: #FFFFFF;
@@ -21,36 +21,41 @@
 }
 .clsLoginMessage{
 	font-size: 11px;
-	font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-family: tahoma,arial,verdana,sans-serif;
 	background-color:#CFDBE5;  /* Exact match for W2K gray default color */
 	TEXT-ALIGN: Center;
 }
 .clsLoginPrompt{
 	font-size: 11px; 
-	font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-family: tahoma,arial,verdana,sans-serif;
 	font-weight: bold;
 }
 .clsLoginInput{
     font-size: 11px; 
-	font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-family: tahoma,arial,verdana,sans-serif;
 	border-style: solid;
 	border-width: 1px;	
 }
 
-.CaptionBar{
-  padding: 3px 3px 3px 17px;
-  font-size: 18px;
-  font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+.CaptionBar
+{
+  /*background: transparent url(/Res/Ext/resources/images/gray/panel/white-top-bottom.gif) repeat-x scroll 0pt -1px;
+  border-bottom: 1px solid #99BBE8;*/
+  background-color:#fff;
+  color: #000;
+  font-family: tahoma,arial,verdana,sans-serif;
+  font-size: 197%;
+  margin: .3em 0 .3em;
   font-weight: bold;
-  text-align: left;
-  color: #FFFFFF;
-  background-color: #CFDBE5;
-  background-image : url(../images/blend3.gif);
-  background-repeat : no-repeat;
-  position: relative;
-  left : 0px;
-  top : 0px;
+  padding: 5px 3px 4px 15px;
+  display: block;
+  font-size: 2em;
+  -webkit-margin-before: 0.67em;
+  -webkit-margin-after: 0.67em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
 }
+
     
 .loginTopBevel{
   background-color: #00337c;
@@ -67,7 +72,7 @@
 .loginCaption{
   color: white;
   font-size: 11px;
-  font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+  font-family: tahoma,arial,verdana,sans-serif;
   text-align: right;
   font-weight: bold;
   vertical-align: baseline;
@@ -76,7 +81,7 @@
 .loginBar{
   padding: 2px 15px 15px 15px;
   font-size: 16px;
-  font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+  font-family: tahoma,arial,verdana,sans-serif;
   font-weight: bolder;
   text-align: left;
   color: #FFFFFF;
@@ -88,13 +93,13 @@
 
 /* Header Styles */
 .clsHeaderTitle{
-	  font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	  font-family: tahoma,arial,verdana,sans-serif;
     font-size:10pt;
     font-weight:bold;
     font-style:Italic;
 }
 .clsHeaderToolbar{
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     font-size:8pt;
     background-color:#97CE21;
     color:#263406;
@@ -112,21 +117,21 @@
     cursor:hand;
     color:black;
     font-size:8pt;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
 }
 .clsHelpHeaderLink{
 	text-decoration:none;
     cursor:hand;
     color:white;
     font-size:10pt;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     font-weight:bold;
 }
 
 /* Loading Style */
 .clsLoadingText{
 	position:absolute;
-	font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-family: tahoma,arial,verdana,sans-serif;
 	font-size: 12pt;
 	font-weight: normal;
 	background-color:#CFDBE5;      
@@ -138,24 +143,24 @@
 .clsWarning{
     background-color: yellow;
     font-size:12pt;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     border: medium double;
     border-color:#04468D;
 }
 /* Standard Text */
 .clsStandardText{
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     font-size:10pt;	
 }
 .clsSmallText{
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     font-size:8pt;	
 }
 /* Page Styles */
 .clsPageTitle{
 	padding: 3px 3px 3px 17px;
 	font-size: 18px;
-	font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-family: tahoma,arial,verdana,sans-serif;
 	font-weight: bold;
 	text-align: left;
 	color: #FFFFFF;
@@ -175,7 +180,7 @@
 .clsValidateAlert{  
     BACKGROUND-COLOR: yellow;
     COLOR: red;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     FONT-SIZE: 9pt;
     FONT-WEIGHT: normal;
     CURSOR: default;
@@ -200,7 +205,7 @@
     PADDING-RIGHT: 3px;
     TEXT-ALIGN: center */
 	font-size: 11px; 
-	font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-family: tahoma,arial,verdana,sans-serif;
 	text-align: center;
 	color: white; 
     font-weight:bold;
@@ -221,7 +226,7 @@
 	BORDER-RIGHT: black solid 1px;
 	BORDER-TOP: #0057AF solid 1px;
 	font-size: 11px; 
-	font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-family: tahoma,arial,verdana,sans-serif;
 	text-align: center;
 	color: white; 
 	background-color: #007AE5; 
@@ -229,7 +234,7 @@
 .clsTableSubHeader {
 	BACKGROUND-COLOR: #188594;
 	COLOR: white;
-	font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-family: tahoma,arial,verdana,sans-serif;
 	FONT-SIZE: 9pt;
 	FONT-WEIGHT: normal;
 	CURSOR: default;
@@ -241,7 +246,7 @@
 /*    BACKGROUND-COLOR: #f7f7ef; */
     background-color:#CFDBE5;
     COLOR: black;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     FONT-SIZE: 9pt;
     FONT-WEIGHT: normal;
     CURSOR: default;
@@ -252,7 +257,7 @@
 /*    BACKGROUND-COLOR: #f7f7ef; */
     background-color:#CFDBE5;
     COLOR: black;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     FONT-SIZE: 9pt;
     FONT-WEIGHT: normal;
     CURSOR: default;
@@ -262,7 +267,7 @@
 .clsTableTextEvenLabel {
     background-color:#CFDBE5;
     COLOR: black;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     FONT-SIZE: 9pt;
     FONT-WEIGHT: bold;
     CURSOR: default;
@@ -273,7 +278,7 @@
 /*    BACKGROUND-COLOR: #efefe6; */
     background-color: #C1CBD7;
     COLOR: black;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     FONT-SIZE: 9pt;
     FONT-WEIGHT: normal;
     CURSOR: default;
@@ -283,7 +288,7 @@
 .clsTableTextOddLabel {
     background-color: #C1CBD7;
     COLOR: black;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     FONT-SIZE: 9pt;
     FONT-WEIGHT: bold;
     CURSOR: default;
@@ -292,30 +297,30 @@
     }
 
 .clsPrompt{
-	font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-family: tahoma,arial,verdana,sans-serif;
     font-size:10pt;
 }
 
 .clsInput{
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     font-size:10pt;
     border: 1px solid Black;
 }
 .clsSelect{
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     font-size:10pt;
     border: 1px solid Black;
     z-index:10;
 }
 .clsSmallInput{
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     font-size:8pt;
     border: 1px solid Black;
 }
     /* FLEXML styles */
 .clsFlexListText{
     text-align : left;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     font-size:10pt;
     font-style:Italic;
     font-weight:normal;
@@ -323,7 +328,7 @@
 
 .clsFlexGroupText{
     text-align : left;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     font-size:10pt;
     font-style:Italic;
     font-weight:normal;
@@ -337,7 +342,7 @@
     BORDER-TOP: black solid 1px;
     BACKGROUND-COLOR: white;
     COLOR: black;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     FONT-SIZE: 9pt
 	}
    
@@ -346,7 +351,7 @@
 }
 .clsApplicationHeader{
 	position:absolute;
-	font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-family: tahoma,arial,verdana,sans-serif;
 	font-size: 14px;
 	font-weight: normal;
 	top:28px;
@@ -356,7 +361,7 @@
 	
 } 
 .clsServiceMonitorBody{
-	font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-family: tahoma,arial,verdana,sans-serif;
 	font-size:8pt;
 	color:black;
 	margin : 0px 0px 0px 0px;
@@ -373,7 +378,7 @@
     color:black;
     position:absolute;
     z-index: 101;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-family: tahoma,arial,verdana,sans-serif;
     font-size:10pt;
 }
 .clsDivCloseButton{
@@ -384,7 +389,7 @@
 }
 .clsErrorTableHeader{
 	font-size: 11px; 
-  font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;	color: white; 
+  font-family: tahoma,arial,verdana,sans-serif;	color: white; 
   font-weight:bold;
 	background-color: #007AE5; 
     padding: 2px 2px 2px 2px;
@@ -394,7 +399,7 @@
 }
 .clsErrorText{
     COLOR: black;
-    font-family: Arial Unicode MS, Lucida Sans Unicode, Tahoma, Verdana, Arial, Helvetica, sans-serif;    FONT-SIZE: 9pt;
+    font-family: tahoma,arial,verdana,sans-serif;    FONT-SIZE: 9pt;
     FONT-WEIGHT: normal;
     CURSOR: default;
     PADDING-LEFT: 4px;
